[package]
name = "meow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
linemux = "0.3.0"
regex = "1.12.3"
serenity = "0.12.5"
poise = "0.6.2"
mc-rcon = "0.1.1"
rust-mc-status = "2.0.0"
dotenvy = "0.15.7"
mc-query = "2.0.0"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.rust]
nonstandard_style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 3 }
