[package]
name = "meow"
version = "0.2.5"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
linemux = "0.3.0"
regex = "1.12.3"
poise = "0.6.2"
mc-rcon = "0.1.1"
rust-mc-status = "2.0.0"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2"

[lints.rust]
nonstandard_style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 3 }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
