[package]
name = "vvv"
version = "0.8.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
linemux = "0.3.0"
regex = "1.12.3"
poise = "0.6.2"
mc-rcon = "0.1.1"
rust-mc-status = "3.0.0"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
url = "2"
redb = "4.1"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
chrono-tz = "0.10"
rand = "0.10"
fastnbt = "2"
serde_json = "1"
flate2 = "1"

[lints.rust]
nonstandard_style = "deny"

[lints.clippy]
all = { level = "deny", priority = 10 }
pedantic = { level = "warn", priority = 3 }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
